--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://my-hugo-site-git-main-taco-wang.vercel.app/'
 languageCode = 'en-us'
 title = 'hello'
 theme = 'paper'
